--- a/src/index.html
+++ b/src/index.html
@@ -9,39 +9,115 @@
 </head>
 <body>
 
-  <!--
-    Previous project placeholder begins
-  -->
   <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
+    <!-- Site navigation -->
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Chris Les</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
   </div>
 
   <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
+  <!-- carousel -->
+    <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+        <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Chris Les</h1>
+              <p>Norway, Bergen, 2017. That's right - here I am right now.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Tomorrow</h1>
+              <p>Where am I going to be tomorrow, you ask? Well, that's a good question! I'd like to know it too.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Yesterday</h1>
+              <p>I don't think too much about yesterday. That's already in the past. Just like today will become yesterday tomorrow too.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
 
+  <div class="marketing">
+    <div class="container">
+      <div class="row">
 
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-music">
+            <h2>MUSIC</h2>
+            <p><h3>I just love playing music.</h3></p>
+          </span>
+        </div>
+
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-camera">
+            <h2>PICTURES</h2>
+            <p><h3>I enjoy taking pictures.</h3></p>
+          </span>
+        </div>
+
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-heart">
+            <h2>LOVE</h2>
+            <p><h3>I love my family.</h3></p>
+          </span>
+        </div>
+
+      </div>
+    </div>
   </div>
 
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
-  <!--
-    Previous project placeholder ends
-    (unused pieces will be deleted at the last task)
-  -->
-
+  <footer>
+    <div class="container">
+      <h3>Get in touch with me!</h3>
+      <p>You just simply call me or send me an email.</p>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
