--- a/src/index.html
+++ b/src/index.html
@@ -9,33 +9,31 @@
 </head>
 <body>
 
-  <div class="header">
-    <!-- Site navigation -->
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Chris Les</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+  <!-- Site navigation -->
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Chris Les</a>
       </div>
-      <!-- /.container-fluid -->
-    </nav>
-  </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
 
   <div class="tagline">
   <!-- carousel -->
@@ -90,21 +88,21 @@
         <div class="col-md-4">
           <span class="glyphicon glyphicon-music">
             <h2>MUSIC</h2>
-            <p><h3>I just love playing music.</h3></p>
+            <p>...playing music</p>
           </span>
         </div>
 
         <div class="col-md-4">
           <span class="glyphicon glyphicon-camera">
             <h2>PICTURES</h2>
-            <p><h3>I enjoy taking pictures.</h3></p>
+            <p>...taking pictures</p>
           </span>
         </div>
 
         <div class="col-md-4">
           <span class="glyphicon glyphicon-heart">
             <h2>LOVE</h2>
-            <p><h3>I love my family.</h3></p>
+            <p>...making love</p>
           </span>
         </div>
 
