--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
       <div class="item active">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Chris Les</h1>
-            <p>Norway, Bergen, 2017. That's right - here I am right now.</p>
+            <h1>Today</h1>
+            <p>Today I'm just playing with some stuff from CodeSchool :-)</p>
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Tomorrow</h1>
-            <p>Where am I going to be tomorrow, you ask? Well, that's a good question! I'd like to know it too.</p>
+            <p>What about tomorrow? That's a good question! I'd like to know that too.</p>
           </div>
         </div>
       </div>
@@ -87,22 +87,22 @@
         <div class="col-md-4">
           <span class="glyphicon glyphicon-music">
             <h2>MUSIC</h2>
-            <p>...playing music</p>
           </span>
+          <p>...playing music feels me with lots of amazing energy. Gives me strength and helps to relax. Just like meditation, vibrating sounds around.</p>
         </div>
 
         <div class="col-md-4">
           <span class="glyphicon glyphicon-camera">
             <h2>PICTURES</h2>
-            <p>...taking pictures</p>
           </span>
+          <p>...taking pictures makes the moment stop forever. And then you can come back there and feel the feelings you've had, and sense the same feelings.</p>
         </div>
 
         <div class="col-md-4">
           <span class="glyphicon glyphicon-heart">
             <h2>LOVE</h2>
-            <p>...making love</p>
           </span>
+          <p>...is just all around us in every sound and every thought. Most powerful and amazing energy in the universe.</p>
         </div>
 
       </div>
