--- a/src/index.html
+++ b/src/index.html
@@ -85,23 +85,20 @@
       <div class="row">
 
         <div class="col-md-4">
-          <span class="glyphicon glyphicon-music">
-            <h2>MUSIC</h2>
-          </span>
+          <span class="glyphicon glyphicon-music"></span>
+          <h2>MUSIC</h2>
           <p>...playing music feels me with lots of amazing energy. Gives me strength and helps to relax. Just like meditation, vibrating sounds around.</p>
         </div>
 
         <div class="col-md-4">
-          <span class="glyphicon glyphicon-camera">
-            <h2>PICTURES</h2>
-          </span>
+          <span class="glyphicon glyphicon-camera"></span>
+          <h2>PICTURES</h2>
           <p>...taking pictures makes the moment stop forever. And then you can come back there and feel the feelings you've had, and sense the same feelings.</p>
         </div>
 
         <div class="col-md-4">
-          <span class="glyphicon glyphicon-heart">
-            <h2>LOVE</h2>
-          </span>
+          <span class="glyphicon glyphicon-heart"></span>
+          <h2>LOVE</h2>
           <p>...is just all around us in every sound and every thought. Most powerful and amazing energy in the universe.</p>
         </div>
 
